uaa-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: uaa-ingress
  namespace: cf-system
spec:
  tls:
  - hosts:
    - "uaa.contour-spike.routing.lol"
    - "*.uaa.contour-spike.routing.lol"
    - "login.contour-spike.routing.lol"
    - "*.login.contour-spike.routing.lol"
    secretName: cf-system-cert
  rules:
  - host: "uaa.contour-spike.routing.lol"
    http:
      paths:
      - backend:
          serviceName: uaa
          servicePort: 8080
  - host: "*.uaa.contour-spike.routing.lol"
    http:
      paths:
      - backend:
          serviceName: uaa
          servicePort: 8080
  - host: "login.contour-spike.routing.lol"
    http:
      paths:
      - backend:
          serviceName: uaa
          servicePort: 8080
  - host: "*.login.contour-spike.routing.lol"
    http:
      paths:
      - backend:
          serviceName: uaa
          servicePort: 8080
